syntax = "proto3";

package grpcMemory;

service grpcMemory {
    rpc getLatestFromUser(MemoryRequest) returns(MemorySet) {}
    rpc getLatestFromDevice(MemoryRequest) returns(MemorySet) {}
    rpc createMemory(MemorySet) returns(MemoryRequest){}
}

message MemorySet {
    string DeviceID     = 1;
    string UserID       = 2;

    string RequestMessage      = 3;
    string ResponseMessage     = 4;
}

message MemoryRequest{
    string ID           = 1;
}

message SuccessResponse {
    bool Success = 1;
}
